--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>🛒 Mini Online Shopping</h1>
+    <div class="logo">
+      <h1>🛒 Mini Online Shopping</h1>
+    </div>
     <div class="header-actions">
       <input type="text" id="searchBox" placeholder="Search products...">
       <div class="cart">
@@ -18,8 +20,13 @@
   </header>
 
   <main>
+    <section id="banner">
+      <h2>Welcome to Your Mini Online Store</h2>
+      <p>Find your favorite gadgets at amazing prices!</p>
+    </section>
+
     <section id="product-list" class="product-grid">
-      <!-- Products will be inserted here by JS -->
+      <!-- JS will insert products here -->
     </section>
   </main>
 
