--- a/index.html
+++ b/index.html
@@ -5,27 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ShopEase</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <header class="navbar">
-    <div class="logo">🛍️ ShopEase</div>
-    <input type="text" id="search" placeholder="Search amazing products...">
-    <div class="cart">
-      🛒 <span id="cart-count">0</span>
-    </div>
-  </header>
+<header class="navbar">
+  <div class="logo">🛍️ ShopEase</div>
+  <input type="text" id="search" placeholder="Search products...">
+  <div class="cart" id="open-cart">🛒 <span id="cart-count">0</span></div>
+</header>
 
-  <section class="hero">
-    <h1>Shop Smart. Shop Stylish.</h1>
-    <p>Discover premium products with the best UI experience.</p>
-  </section>
+<section class="hero">
+  <h1>Shop Smart. Order Fast.</h1>
+  <p>Premium shopping experience</p>
+</section>
 
-  <main class="products" id="product-list"></main>
+<main class="products" id="product-list"></main>
 
-  <script src="script.js"></script>
+<!-- CART -->
+<div class="cart-overlay" id="cart-overlay"></div>
+
+<div class="cart-sidebar" id="cart-sidebar">
+  <h2>Your Cart</h2>
+  <div id="cart-items"></div>
+  <div class="cart-footer">
+    <h3>Total: $<span id="total">0</span></h3>
+    <button id="checkout-btn">Checkout</button>
+  </div>
+</div>
+
+<!-- CHECKOUT -->
+<div class="checkout-modal" id="checkout-modal">
+  <div class="checkout-box">
+    <h2>Checkout</h2>
+    <input type="text" id="name" placeholder="Full Name">
+    <input type="text" id="address" placeholder="Address">
+    <input type="text" id="phone" placeholder="Phone Number">
+    <button id="place-order">Place Order</button>
+  </div>
+</div>
+
+<!-- ORDER SUCCESS -->
+<div class="success-modal" id="success-modal">
+  <div class="success-box">
+    <h2>🎉 Order Placed!</h2>
+    <p>Thank you for shopping with us.</p>
+    <button onclick="location.reload()">Continue Shopping</button>
+  </div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
