--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ShopEase</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -19,8 +19,8 @@
 </header>
 
 <section class="hero">
-  <h1>Smart Shopping Experience</h1>
-  <p>Modern UI • Dark Mode • Checkout</p>
+  <h1>Smart Online Shopping</h1>
+  <p>Modern UI • Cart • Checkout • Dark Mode</p>
 </section>
 
 <main class="products" id="product-list"></main>
@@ -51,7 +51,7 @@
 <div class="success-modal" id="success-modal">
   <div class="success-box">
     <h2>✅ Order Successful</h2>
-    <p>Your order has been placed.</p>
+    <p>Thank you for shopping with us.</p>
     <button onclick="location.reload()">Continue Shopping</button>
   </div>
 </div>
